objects/CRMfusionDBR101__Fuzzy_Rule__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom fuzzy matching rules.</description>
    <fields>
        <fullName>CRMfusionDBR101__Index__c</fullName>
        <description>This is used to order the rules for a set.</description>
        <label>Rule Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Regex__c</fullName>
        <description>Regular expression for this step of the rule.</description>
        <label>Regex</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Replace_Value__c</fullName>
        <label>Replace Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Rule_Set__c</fullName>
        <description>Fuzzy rule set such as English, French, etc..</description>
        <label>Rule Set</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Set_Size__c</fullName>
        <label>Set Size</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DupeBlocker Fuzzy Rules</label>
</CustomObject>